--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- <script type="text/javascript" src="/js/script.js"></script> -->
     <title>Document</title>
@@ -12,7 +12,7 @@
 <body>
     <header class="showcase">
         <div class="showcase-top">
-            <img src="/svg/13476427181551941709.svg" alt="logo">
+            <img src="svg/13476427181551941709.svg" alt="logo">
             <a href="#" class="btn btn-rounded">Sign In</a>
         </div>
         <div class="showcase-content">
@@ -40,9 +40,9 @@
             </div>
             <div class="img-area-top">
                 <div class="tv-image">
-                    <img src="/img/tv.png" alt="tv">
+                    <img src="img/tv.png" alt="tv">
                     <div class="tv-gif">
-                        <video autoplay playsinline muted loop src="/m4v/video-tv-in-0819.m4v"></video>
+                        <video autoplay playsinline muted loop src="m4v/video-tv-in-0819.m4v"></video>
                     </div>
                 </div>
             </div>
@@ -52,10 +52,10 @@
         <div class="popular-common">
             <div class="img-area-top">
                 <div class="mobile-image">
-                    <img src="/img/mobile-0819.jpg" alt="tv">
+                    <img src="img/mobile-0819.jpg" alt="tv">
                     <div class="box-wrapper">
                         <div class="box-image">
-                            <img src="/img/boxshot.png" alt="boxshot">
+                            <img src="img/boxshot.png" alt="boxshot">
                         </div>
                         <div class="text">
                             <div class="text-items">
@@ -64,7 +64,7 @@
                             </div>
                         </div>
                         <div class="gif">
-                            <img src="/gif/download-icon.gif" alt="gif">
+                            <img src="gif/download-icon.gif" alt="gif">
                         </div>
                     </div>
                 </div>
@@ -85,9 +85,9 @@
             </div>
             <div class="img-area-top">
                 <div class="tv-image">
-                    <img src="/img/device-pile-in.png" alt="tv">
+                    <img src="img/device-pile-in.png" alt="tv">
                     <div class="tv-gif1">
-                        <video autoplay playsinline muted loop src="/m4v/video-devices-in.m4v"></video>
+                        <video autoplay playsinline muted loop src="m4v/video-devices-in.m4v"></video>
                     </div>
                 </div>
             </div>
